# html6

./: .gitignore  CLAUDE.md  Cargo.toml  FEED_WITH_PROFILES_PLAN.md  HNMD_RUST.md  NESTED_COMPONENTS.md  PLAN.md  README.md
apps/: feed.hnmd  hello.hnmd  test_component.hnmd  test_incremental.hnmd  test_props.hnmd
apps/components/: Feed.hnmc  Profile.hnmc
examples/: ast_example.rs  test_enrichment.rs
src/: lib.rs  loader.rs  main.rs  reconciler.rs
src/parser/: ast.rs  component.rs  component_def.rs  decompile.rs  expr.rs  frontmatter.rs  markdown.rs  mdx.rs  mod.rs
src/renderer/: mod.rs  widgets.rs
src/runtime/: components.rs  context.rs  filters.rs  jaq.rs  loaders.rs  mod.rs  nostr.rs  pipes.rs  query.rs
tests/: component_integration_test.rs
