[package]
name = "html6"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI
masonry = { git = "https://github.com/linebender/xilem" }
masonry_winit = { git = "https://github.com/linebender/xilem" }
tracing = "0.1"
image = "0.25"

# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"  # Successor to deprecated serde_yaml
markdown = "1.0.0"      # Stable release with MDX support
regex = "1.11"

# File watching
notify = "8.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
masonry_testing = { git = "https://github.com/linebender/xilem" }
masonry = { git = "https://github.com/linebender/xilem", features = ["testing"] }
